# beetle

./: .gitignore  README.adoc  README.md  TODO  beetle.sdf  beetle.urdf  empty.world  frames_2022-09-23_12.16.14.gv  frames_2022-09-23_12.20.15.gv  frames_2022-09-23_12.22.03.gv  frames_2022-10-27_18.14.54.gv  links.txt  msgs.txt  overlay.sh  packages.txt  underlay.sh
ackermann_drive_controller/: CMakeLists.txt  ackermann_drive_controller.xml  ackermann_drive_plugin.xml  package.xml
ackermann_drive_controller/config/: ackermann_drive_controller.yaml
ackermann_drive_controller/include/ackermann_drive_controller/: ackermann_drive_controller.hpp  odometry.hpp  speed_limiter.hpp  steering_limiter.hpp  traction_limiter.hpp  visibility_control.h
ackermann_drive_controller/src/: ackermann_drive_controller.cpp  odometry.cpp  speed_limiter.cpp  steering_limiter.cpp  traction_limiter.cpp
ackermann_drive_controller/test/: test_ackermann_drive_controller.cpp  test_load_ackermann_drive_controller.cpp
ackermann_drive_controller/test/config/: test_ackermann_drive_controller.yaml
beetle_description/: package.xml
beetle_description/launch/: display.launch.py
beetle_description/rviz/: default_view.rviz
beetle_description/urdf/: basic_shapes.xacro.xml  basic_shapes_novisual.xacro.xml  beetle.urdf  beetle_sdv.urdf  sdv_nav.urdf  test.urdf
beetle_evaluation/: package.xml  setup.cfg  setup.py
beetle_evaluation/beetle_evaluation/: beetle_evaluation_manager.py
beetle_gazebo/: package.xml
beetle_gazebo/config/: ackermann_controller.yaml
beetle_gazebo/launch/: robot.launch.py
beetle_gazebo/rviz/: default_view.rviz
beetle_gazebo/worlds/: ctu_college_of_tech_workshop.world  empty.world
beetle_msg_forwarder/: CMakeLists.txt  package.xml
beetle_msg_forwarder/src/: beetle_msg_forwarder.cpp
beetle_msgs/: CMakeLists.txt  package.xml
beetle_msgs/msg/: OdometryLite.msg
beetle_navigation2/: package.xml
beetle_navigation2/behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml
beetle_navigation2/config/: navigation_params.yaml
beetle_navigation2/launch/: bringup.launch.py  driver.launch.py  localization.launch.py  nav.launch.py
beetle_navigation2/maps/: Field.pgm  Field.yaml  andres_map.pgm  andres_map.yaml  map_blender_no_buildings.pgm  map_blender_no_buildings.yaml
beetle_navigation2/rviz/: default_view.rviz
imgs/: frames_2022-09-22_16.18.03.gv
map_odom_static_broadcaster/: CMakeLists.txt  package.xml
map_odom_static_broadcaster/src/: map_odom_static_broadcaster.cpp
scripts/: ackermann-analysis.py  analyze_data.py  beetle_evaluation.py  subtitling.py  test.py
src/ackermann_drive_controller/: CMakeLists.txt
src/ackermann_drive_controller/include/ackermann_drive_controller/: ackermann_drive_controller.hpp
src/ackermann_drive_controller/src/: ackermann_drive_controller.cpp
src/ackermann_drive_controller/test/: test_ackermann_drive_controller.cpp
src/beetle_description/: CMakeLists.txt  package.xml
src/beetle_description/launch/: display.launch.py
src/beetle_description/urdf/: beetle.urdf
src/beetle_evaluation/beetle_evaluation/: beetle_evaluation_manager.py
src/beetle_gazebo/: CMakeLists.txt  package.xml
src/beetle_gazebo/config/: ackermann_controller.yaml
src/beetle_gazebo/launch/: robot.launch.py  robot_launch.py
src/beetle_gazebo/worlds/: ctu_college_of_tech_workshop.world  empty.world
src/beetle_navigation2/: CMakeLists.txt  package.xml
src/beetle_navigation2/config/: navigation_params.yaml  navigation_params_galactic.yaml  navigation_params_wo_odom.yaml
src/beetle_navigation2/launch/: bringup.launch.py  localization.launch.py
src/beetle_navigation2/rviz/: default_view.rviz
src/demo_image_publisher_py/: package.xml  setup.cfg  setup.py
src/demo_image_publisher_py/demo_image_publisher_py/: image_publisher.py  jetson_simple_camera.py
src/demo_image_publisher_py/launch/: jetson-cam-streaming.py
src/demo_img_pub_cpp/: CMakeLists.txt  package.xml
src/sam_bot_description/: package.xml
src/underdog_description/: CMakeLists.txt  package.xml
src/underdog_description/config/: ekf.yaml
src/underdog_description/launch/: display.launch.py  robot.launch.py
src/underdog_description/src/description/: underdog_description.urdf
src/webots_ros2_agv/: package.xml  setup.cfg  setup.py
src/webots_ros2_agv/launch/: robot_launch.py
src/webots_ros2_agv/resource/: agv_webots.urdf
src/webots_ros2_agv/webots_ros2_agv/: agv_driver.py
src/webots_ros2_agv/worlds/: khoa_cn.wbt
src/webots_ros2_ugv/: package.xml  setup.cfg  setup.py
src/webots_ros2_ugv/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
src/webots_ros2_ugv/config/: localization_params.yaml  nav2_params.yaml  nav2_params.yaml.bk  nav2_params_burger.yaml  nav2_params_galactic.yaml  nav2_params_ugv.yaml
src/webots_ros2_ugv/launch/: robot_launch.py
src/webots_ros2_ugv/maps/: map.yaml
src/webots_ros2_ugv/resource/: ugv_webots.urdf
src/webots_ros2_ugv/rviz/: urdf_config.rviz
src/webots_ros2_ugv/webots_ros2_ugv/: ugv_driver.py
src/webots_ros2_ugv/worlds/: khoa_cn.wbt  waffle.model
