<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>beetle_navigation2</name>
  <version>0.0.0</version>
  <description>ROS 2 launch files for navigation2 and Gazebo simulation of Beetle.</description>
  <maintainer email="khanh93vn@gmail.com">khanh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>beetle_gazebo</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
